@@ -2,8 +2,12 @@
        Version 5.3.1
 ------------------------------
 
-  . Check Syntax now shows the blue boxes from the documentation in
-    the definitions window
+  . Enable online check syntax by default (it has been 
+    available in the last two releases, but was disabled
+    by default)
+
+  . Check Syntax now shows the blue boxes from the 
+    documentation in the definitions window
 
 ------------------------------
        Version 5.3
